# proppa

./: .gitignore  README.md  page_source.html  page_source.xml  pyproject.toml  test.html  wanted-webcrawl.py
prompts/: webscrape-prompt.py
