[tool.poetry]
name = "proppa"
version = "0.1.0"
description = "data career research app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
selenium = "^4.21.0"
langchain = "^0.2.1"
langchain-community = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
